--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
   "name": "slide-reactions",
   "version": "0.1.0",
-  "description": "",
-  "main": "dist/index.js",
-  "umd:main": "dist/index.umd.js",
-  "module": "dist/index.m.js",
-  "source": "components/hello-world/index.js",
+  "description": "HTML/JS Widget to add user reactions to any online presentation/page",
+  "source": "components/reactions/index.js",
   "scripts": {
     "test": "NODE_ENV=test jest",
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
     "build": "preact build --no-prerender --clean --template src/index.ejs --service-worker false",
     "serve": "npm run build && preact serve",
-    "dev": "preact watch --template src/index.ejs",
-    "dist": "microbundle --entry src/components/hello-world/index.js"
+    "dev": "preact watch --template src/index.ejs"
   },
   "keywords": [],
-  "author": "Zouhir <zouhir@zouhir.org>",
+  "author": "Ely Alvarado <elyalvarado@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "eslint": "^4.5.0",
     "identity-obj-proxy": "^3.0.0",
     "if-env": "^1.0.0",
     "jest": "^21.2.1",
-    "microbundle": "^0.6.0",
     "node-sass": "^4.9.2",
     "preact-cli": "^2.0.2",
     "preact-render-to-string": "^3.7.0",
