--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "description": "HTML/JS Widget to add user reactions to any online presentation/page",
   "source": "components/reactions/index.js",
+  "main": "dist/slide-reactions.js",
   "scripts": {
     "test": "NODE_ENV=test jest",
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
     "build": "preact build --no-prerender --clean --template src/index.ejs --service-worker false",
     "serve": "npm run build && preact serve",
-    "dev": "preact watch --template src/index.ejs"
+    "dev": "preact watch --template src/index.ejs",
+    "dist": "npm run build && rimraf dist/ && mkdir -p dist && cp build/bundle.js dist/slide-reactions.js && gzip -k dist/slide-reactions.js"
   },
-  "keywords": [],
+  "keywords": ["widget", "reveal.js", "preact"],
   "author": "Ely Alvarado <elyalvarado@gmail.com>",
   "license": "MIT",
   "devDependencies": {
